# BasicDFIR

./: .gitignore  AGENTS.md  GEMINI.md  IDEA_REPORT.md  README.md  RESEARCH_BRIEF.md  benchmark.md  claude.md  instance.json  requirements.txt  setup.py  test_MP.py  test_atd_dinounet.py  test_atd_profile.py  test_decoder.py  test_dino_atd_unet.py  test_dinonet.py  test_dinounet_atd.py  test_feat_map.py  test_feature_refine.py  test_freeze.py  train.sh  train_flow.sh  train_meanflow.sh  train_rectifiedflow.sh  说明.md
.pipeline/: config.json
basicsr/: __init__.py  deploy.sh  test.py  train.py
docs/: RectifiedFlow_CN.md
flow-based codezoo/pMF-main/: .gitignore  README.md  pyproject.toml  pytest.ini  train.py
flow-based codezoo/pMF-main/configs/: pMF-B-16.yaml  pMFSR-B-16.yaml
flow-based codezoo/pMF-main/docs/: discrepancy_log.md  paper_ground_truth.md  parameter_consistency_report_B16.md  parameter_consistency_report_all.md  pmf_paper_alignment_report.md
flow-based codezoo/pMF-main/pmf/: dataset.py  dit.py  pixel_mean_flow.py  pixel_mean_flow_sr.py
flow-based codezoo/pMF-main/scripts/: eval.py  train.py
flow-based codezoo/pMF-main/src/pmf/: config.py  dataset.py  dit.py  optimizer.py  pixel_mean_flow.py
flow-based codezoo/pMF-main/tests/: test_config.py  test_dataset.py  test_env.py  test_integration.py  test_model.py  test_new_features.py  test_optimizer.py  test_pmf.py
jupyter/: Image Splitting.ipynb  JiTv2-1分析.ipynb  SwinIRx2_inference.ipynb  TestDataset.ipynb  Untitled.ipynb  demo.ipynb  test model.ipynb
memory/: lesson_checkpoint_memory.md
(+745 files in other folders)
